--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,7 +1,10 @@
 @import '@fontsource/fira-mono';
-
+@font-face{
+  font-family: 'Roboto';
+  src: url('/RobotoCondensed-Bold.ttf');
+}
 :root {
-	--font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+	--font-body: Roboto, Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	--font-mono: 'Fira Mono', monospace;
 	--color-bg-0: rgb(202, 216, 228);
