--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,7 +1,7 @@
 @import '@fontsource/fira-mono';
 @font-face{
   font-family: 'Roboto';
-  src: url('/RobotoCondensed-Bold.ttf');
+  src: url('/Roboto-Regular.ttf');
 }
 :root {
 	--font-body: Roboto, Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
