--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,8 +1,12 @@
 @import '@fontsource/fira-mono';
-@font-face{
-  font-family: 'Roboto';
-  src: url('/Roboto-Regular.ttf');
+
+@font-face {
+    font-family: "Roboto";
+    font-weight: 800;
+    src: url("/RobotoCondensed-Regular.ttf");
+
 }
+
 :root {
 	--font-body: Roboto, Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
